--- a/client/src/scss/_buttons.scss
+++ b/client/src/scss/_buttons.scss
@@ -5,7 +5,7 @@ button {
     border-radius: 50px;
     padding: 6px 12px;
     cursor: pointer;
-    transition: all 500ms ease;
+    transition: all 0.3s ease;
 }
 
 button:disabled,
@@ -24,7 +24,7 @@ button:disabled:hover {
 
     &:hover, &:active, &:focus  {
         background: $button-hover-color;
-        transition: all 300ms ease;
+        transition: all 0.3ms ease;
         border: $button-hover-color 1px solid;
     }
 }
@@ -37,7 +37,7 @@ button:disabled:hover {
     &:hover, &:active, &:focus {
         border-color: $button-hover-color;
         color: $button-hover-color;
-        transition: all 300ms ease;
+        transition: all 0.3ms ease;
     }
 }
 
@@ -67,11 +67,11 @@ button:disabled:hover {
 //ICONIC BUTTONS
 .icon-button-wrapper {
     margin: 5px 5px -1px 5px;
-    transition: all 300ms ease;
+    transition: all 0.2ms ease;
 
     &:hover, &:focus {
         cursor: pointer;
-        transition: all 200ms ease;
+        transition: all 0.1ms ease;
     }
 }
 
@@ -88,7 +88,7 @@ button:disabled:hover {
 .bookmark-button {
     color: #999;
 
-    &:hover, &:focus {
+    &:hover, &:focus, &:active {
         color: gold;
     }
 }
@@ -103,11 +103,11 @@ button:disabled:hover {
     top: 10px;
     right: 10px;
     z-index: 99;
-    transition: all 600ms ease;
+    transition: all 0.1s ease;
 
     &:hover, &:focus {
         cursor: pointer;
-        transition: all 300ms ease;
+        transition: all 0.1s ease;
         color: $primary-color;
     }
 }
