--- a/client/src/scss/_animation.scss
+++ b/client/src/scss/_animation.scss
@@ -10,60 +10,40 @@
 
 //credit to https://loading.io/css/
 
-//ELLIPSIS
-.lds-ellipsis {
+//RING LOADER
+.lds-ring {
   display: inline-block;
   position: relative;
-  width: 64px;
-  height: 64px;
+  width: 13px;
+  height: 13px;
 }
-.lds-ellipsis div {
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
   position: absolute;
-  top: 27px;
-  width: 11px;
-  height: 11px;
+  width: 13px;
+  height: 13px;
+  border: 0.2em solid $light-grey;
+  margin-top: -2px;
   border-radius: 50%;
-  background: $primary-color;
-  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: $light-grey transparent transparent transparent;
 }
-.lds-ellipsis div:nth-child(1) {
-  left: 6px;
-  animation: lds-ellipsis1 0.6s infinite;
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
 }
-.lds-ellipsis div:nth-child(2) {
-  left: 6px;
-  animation: lds-ellipsis2 0.6s infinite;
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
 }
-.lds-ellipsis div:nth-child(3) {
-  left: 26px;
-  animation: lds-ellipsis2 0.6s infinite;
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
 }
-.lds-ellipsis div:nth-child(4) {
-  left: 45px;
-  animation: lds-ellipsis3 0.6s infinite;
-}
-@keyframes lds-ellipsis1 {
+@keyframes lds-ring {
   0% {
-    transform: scale(0);
+    transform: rotate(0deg);
   }
   100% {
-    transform: scale(1);
-  }
-}
-@keyframes lds-ellipsis3 {
-  0% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(0);
-  }
-}
-@keyframes lds-ellipsis2 {
-  0% {
-    transform: translate(0, 0);
-  }
-  100% {
-    transform: translate(19px, 0);
+    transform: rotate(360deg);
   }
 }
 
@@ -146,3 +126,5 @@
     opacity: 0;
   }
 }
+
+//
