displaying profile badge

--- a/client/src/components/ProfileBox/ProfileBox.scss
+++ b/client/src/components/ProfileBox/ProfileBox.scss
@@ -42,6 +42,15 @@ h3 {
 	padding-bottom: 20px;
 }
 
+.icon {
+	color: $primary-color;
+	font-size: 50px;
+}
+.icon-background {
+	color: white;
+
+}
+
 //Edit
 .edit-icon-wrapper {
 	position: absolute;
