--- a/client/src/pages/LeaderBoard/LeaderBoard.scss
+++ b/client/src/pages/LeaderBoard/LeaderBoard.scss
@@ -16,8 +16,9 @@
   border-bottom:1px dashed $border-color;
 }
 
-.fab {
+.fas {
   padding: 10px;
+  color: $primary-color-dark;
 }
 
 .user-info {
