--- a/client/src/components/ProfileBox/ProfileBox.scss
+++ b/client/src/components/ProfileBox/ProfileBox.scss
@@ -42,29 +42,51 @@ h3 {
 	padding-bottom: 20px;
 }
 
-.icon {
+.badgeicon {
 	color: $primary-color;
 	font-size: 50px;
 }
+
 .icon-background {
 	color: white;
-
 }
 
-//Edit
-.edit-icon-wrapper {
-	position: absolute;
+.tip {
+	text-align:center;
 	padding: 10px;
 	top: 10px;
 	right: 10px;
 	transition: all 300ms ease;
-
 	&:hover, &:focus {
 		cursor: pointer;
 		transition: all 300ms ease;
 		color: $primary-color;
 	}
 }
+
+.tipicon {
+	position: relative;
+	display: inline-block;
+}
+
+.tipicon .tiptext {
+	visibility: hidden;
+	width: 150px;
+	background-color: $body-color;
+	color: white;
+	text-align: center;
+	border-radius: 5px;
+	padding: 5px 0;
+	position: absolute;
+	z-index: 1;
+	top: -5px;
+	left: 110%;
+}
+
+.tipicon:hover .tiptext {
+	visibility: visible;
+}
+
 
 @media screen and (min-width: 480px) {
 	.profile-img {
