--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -20,6 +20,7 @@ $page-margin: 60px;
 $primary-color: #3DBF74;
 $primary-color-dark: #21A067;
 $primary-color-light: #ECF4EA;
+$primary-color-lighter: #D6F0D0;
 $body-color: #4A4543;
 $link: $primary-color;
 $link-secondary: #777;
