--- a/client/src/scss/_base.scss
+++ b/client/src/scss/_base.scss
@@ -26,7 +26,7 @@ body {
   }
 
 a {
-    color: $primary-color;
+    color: $body-color;
     text-decoration: none;
     transition: all 500ms ease;
 }
@@ -42,6 +42,10 @@ a:hover {
     color: $primary-color;
     text-align: center;
     margin-bottom: 30px;
+}
+
+.bold {
+    font-weight: bold;
 }
 
 .material-icons.md-18 { font-size: 18px; }
