--- a/client/src/scss/_layout.scss
+++ b/client/src/scss/_layout.scss
@@ -27,7 +27,11 @@
 }
 
 .spacing-not-last-child {
-	margin-right: 10px;
+	margin-right: 15px;
+}
+
+.right-align {
+	margin-left: auto;
 }
 
 .background {
