--- a/client/src/components/ItemProfile/ItemProfile.scss
+++ b/client/src/components/ItemProfile/ItemProfile.scss
@@ -1,22 +1,5 @@
 @import "@/scss/global.scss";
 
-.fab {
-	font-size: 24px;
-	color: $primary-color;
-	transition: all 0.3s ease;
-
-	&:hover, &:focus {
-		color: $primary-color-dark;
-		transition: all 0.3s ease;
-	}
-}
-
-.comment-box {
-	border: 1px #eee solid;
-	padding: 30px 40px 0 40px;
-	border-radius: 3px;
-}
-
 .medium-card {
 	background: $card-color;
 	box-shadow: $box-drop-shadow;
@@ -40,7 +23,7 @@
     }
 
     .card-content {
-			padding: 15px 0!important;
+			padding: 20px 0!important;
     }
 
     .card-image {
@@ -68,7 +51,7 @@
 }
 
 .item-title {
-	font-size: 16px;
+	font-size: 18px;
 	font-weight: bold;
 	display: block;
 }
@@ -80,7 +63,7 @@
 .button-menu {
 	margin-left: auto;
 	padding-bottom: 25px;
-
+	width: 100%;
 }
 
 @media screen and (min-width: 768px) {
@@ -94,14 +77,28 @@
 	margin: 10px 0;
 }
 
-.tag-spacing {
-	margin-bottom: 15px;
+p.item-description {
+	padding-top: 18px;
 }
 
-.button-circle {
-	padding: 5px;
-  border-radius: 50%;
-  width: 48px;
-	height: 48px;
-	color: $light-grey;
+button.button-circle {
+	border-radius: 50%;
+  width: 36px;
+	height: 36px;
+	padding: 3px;
+}
+
+span.button-icon {
+	transform: translateY(5px);
+	margin-right: 2px;
+	margin-top: -10px;
+}
+
+.fab {
+	font-size: 16px;
+	transition: all 0.3s ease;
+
+	&:hover, &:focus {
+		color: $primary-color;
+	}
 }
