moved page loaders to components

--- a/client/src/components/ItemProfile/ItemProfile.scss
+++ b/client/src/components/ItemProfile/ItemProfile.scss
@@ -97,6 +97,7 @@ span.button-icon {
 .fab {
 	font-size: 16px;
 	transition: all 0.3s ease;
+	transform: translate(-2px, -4px);
 
 	&:hover, &:focus {
 		color: $primary-color;
