--- a/client/src/scss/_animation.scss
+++ b/client/src/scss/_animation.scss
@@ -1,11 +1,16 @@
 @import "./global.scss";
 
 .animation-wrapper {
-  //center
+  //center on page
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.div-wrapper {
+  //center in div
+  text-align: center;
 }
 
 //credit to https://loading.io/css/
@@ -127,4 +132,28 @@
   }
 }
 
-//
+//DUAL RING
+.lds-dual-ring {
+  display: inline-block;
+  width: 64px;
+  height: 64px;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 46px;
+  height: 46px;
+  margin: 1px;
+  border-radius: 50%;
+  border: 4px solid $primary-color;
+  border-color: $primary-color transparent $primary-color transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
