--- a/client/src/scss/_layout.scss
+++ b/client/src/scss/_layout.scss
@@ -9,6 +9,10 @@
 	box-shadow: $box-drop-shadow;
 }
 
+.profile-grid {
+	margin: 0 20px;
+}
+
 @media screen and (min-width: 768px) {
     .page-container {
         padding: $margin $page-margin;
