disable posting comments if not logged in

--- a/client/src/components/ItemProfile/ItemProfile.scss
+++ b/client/src/components/ItemProfile/ItemProfile.scss
@@ -94,6 +94,12 @@ span.button-icon {
 	margin-top: -10px;
 }
 
+span.clicked {
+	background: $primary-color;
+	color: $button-text;
+	border: $primary-color 1px solid;
+}
+
 .fab {
 	font-size: 16px;
 	transition: all 0.3s ease;
