fix like and bookmark button in item profile

--- a/client/src/components/ItemProfile/ItemProfile.scss
+++ b/client/src/components/ItemProfile/ItemProfile.scss
@@ -94,10 +94,14 @@ span.button-icon {
 	margin-top: -10px;
 }
 
-span.clicked {
+button.clicked {
 	background: $primary-color;
 	color: $button-text;
 	border: $primary-color 1px solid;
+
+	&:hover, &:focus {
+		background-color: none;
+	}
 }
 
 .fab {
