--- a/client/src/scss/_base.scss
+++ b/client/src/scss/_base.scss
@@ -66,3 +66,16 @@ a:hover {
 
 .material-icons.md-18 { font-size: 18px; }
 .material-icons.md-16 { font-size: 16px; }
+
+
+.fa-seedling {
+  color:$primary-color;
+}
+
+.fa-leaf {
+  color:$primary-color-dark;
+}
+
+.fa-tree {
+  color: #ffe327;
+}
