--- a/client/src/scss/_base.scss
+++ b/client/src/scss/_base.scss
@@ -66,3 +66,4 @@ a:hover {
 
 .material-icons.md-18 { font-size: 18px; }
 .material-icons.md-16 { font-size: 16px; }
+.material-icons.md-8 { font-size: 8px; }
