--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -17,7 +17,7 @@ $margin: 40px;
 $page-margin: 60px;
 
 //Colours
-$primary-color: #3DBF74;
+$primary-color: #43d380;
 $primary-color-dark: #21A067;
 $primary-color-light: #ECF4EA;
 $primary-color-lighter: #D6F0D0;
