minor fixes to colours

--- a/client/src/scss/_base.scss
+++ b/client/src/scss/_base.scss
@@ -69,13 +69,13 @@ a:hover {
 
 
 .fa-seedling {
-  color:$primary-color;
+color: $primary-color;
 }
 
 .fa-leaf {
-  color:$primary-color-dark;
+  color: $primary-color-dark;
 }
 
 .fa-tree {
-  color: #0d7e3e;
+  color: $primary-color-darker;
 }
