--- a/client/src/components/ItemProfile/ItemProfile.scss
+++ b/client/src/components/ItemProfile/ItemProfile.scss
@@ -69,7 +69,7 @@
 @media screen and (min-width: 768px) {
 	.medium-card {
 		margin: $margin $page-margin;
-		padding: 30px $margin $margin $margin;
+		padding: 30px;
 	}
 }
 
