--- a/client/src/components/LandingHero/mission.scss
+++ b/client/src/components/LandingHero/mission.scss
@@ -1,36 +1,33 @@
 @import "../../scss/global.scss";
 
-body{
-  background-color: $bg-color;
-  padding:20px;
+.section {
+  background-color: $card-color;
 }
 
-.mission, .member{
-  box-shadow: $box-drop-shadow;
-  padding:20px;
-  margin-left:auto;
-  margin-right:auto;
-  margin-bottom: 30px;
-  background-color: white;
-  color:$body-color;
-  width: 80%;
+#mission {
+  background: $primary-color-light;
+  padding: 0px;
 }
 
-h1{
-  font-size: $title-size;
-  color: $primary-color;
+#about {
+  padding: 0px;
+}
+
+h2.title {
   text-align: center;
-  margin-bottom: 10px;
+  font-size: 18px;
+  color: $primary-color-dark;
+  font-weight: lighter;
 }
 
-h2{
-  font-weight: bold;
-  color: $body-color;
-  text-align: center;
-  margin-bottom: 10px;
+@media screen and (min-width: 480px) {
+
+  h2.title {
+    font-size: 1.5rem;
+  }
 }
 
-h3, p{
-  text-align: center;
-  padding:5px;
+p.statement {
+  font-size: 16px;
+  font-weight: lighter;
 }
